--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/*.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
   "homepage": "https://github.com/holodex/matrix-zoom#readme",
   "dependencies": {
     "matrix-utilities": "^1.2.4"
+  },
+  "devDependencies": {
+    "tape": "^4.0.2"
   }
 }
