--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "scale"
   ],
   "author": "holodex",
-  "license": "ISC",
+  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/holodex/matrix-zoom/issues"
   },
